--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.1.8", features = ["derive"] }
+indicatif = "0.17.3"
+ndarray = "0.15.6"
 rand = "0.8.5"
 rayon = "1.7.0"
 serde = "1.0.156"
