--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,15 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "sphere_world"
+crate-type = ["cdylib"]
+
 [dependencies]
-clap = { version = "4.1.8", features = ["derive"] }
-indicatif = "0.17.3"
 ndarray = { version = "0.15.6", features = ["serde"] }
 num-traits = "0.2.15"
+numpy = "0.18.0"
+pyo3 = { version = "0.18.2", features = ["extension-module"] }
 rand = "0.8.5"
 rayon = "1.7.0"
 serde = "1.0.156"
