--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["cdylib"]
 ndarray = { version = "0.15.6", features = ["serde"] }
 num-traits = "0.2.15"
 numpy = "0.18.0"
+once_cell = "1.17.1"
 pyo3 = { version = "0.18.2", features = ["extension-module"] }
 rand = "0.8.5"
 rayon = "1.7.0"
