--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ name = "sphere_world"
 crate-type = ["cdylib"]
 
 [dependencies]
+itertools = "0.10.5"
 lru = "0.10.0"
 ndarray = { version = "0.15.6", features = ["serde"] }
 num-traits = "0.2.15"
