--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,14 @@ name = "sphere_world"
 crate-type = ["cdylib"]
 
 [dependencies]
+itertools = "0.10.5"
 ndarray = { version = "0.15.6", features = ["serde"] }
 num-traits = "0.2.15"
 numpy = "0.18.0"
 once_cell = "1.17.1"
 pyo3 = { version = "0.18.2", features = ["extension-module"] }
 rand = "0.8.5"
+rand_chacha = "0.3.1"
 rayon = "1.7.0"
 serde = "1.0.156"
 serde_json = "1.0.94"
