--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ itertools = "0.10.5"
 ndarray = { version = "0.15.6", features = ["rayon"] }
 numpy = "0.18.0"
 pyo3 = { version = "0.18.2", features = ["extension-module"] }
+rand = "0.8.5"
 rayon = "1.7.0"
 vecmath = "1.0.0"
